[package]
name = "myrrh-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0"
regex = "1"
itertools = "0.13.0"
json = "0.12.4"
rand = "0.8.5"