[package]
name = "myrrh-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0"
regex = "1"
itertools = "0.14.0"
json = "0.12.4"
rand = "0.9.1"